One step completed

--- a/index.html
+++ b/index.html
@@ -6,8 +6,28 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Путешествия по России</title>
   <meta name="description" content="Путешествия по России - проектная работа в рамках Яндекс.Практикума">
+  <!-- CSS -->
+  <link rel="stylesheet" href="./vendor/normalize.css">
+  <link rel="stylesheet" href="./pages/index.css">
 </head>
-<body>
+<body class="page">
+  <!-- Хидер -->
+  <header class="header">
+    <a class="header__logo" href="#" title="Путешествия по России">Путешествия по России</a>
 
+    <nav class="header__lang-selection">
+      <ul class="header__lang-links-list">
+        <li class="header__lang-links-list-item"><a href="#ru" title="Эта страница на русском языке" class="header__lang-link" hreflang="ru">Ru</a></li>
+        <li class="header__lang-links-list-item"><a href="#eng" title="Read this page on english" class="header__lang-link" hreflang="en">Eng</a></li>
+      </ul>
+    </nav>
+  </header>
+  <!-- // Хидер -->
+
+  <!-- Футер -->
+  <footer class="footer">
+
+  </footer>
+  <!-- // Футер -->
 </body>
 </html>
