Сохраняем прогресс перед перерывом

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   <title>Путешествия по России</title>
   <meta name="description" content="Путешествия по России - проектная работа в рамках Яндекс.Практикума">
   <!-- CSS -->
-  <link rel="stylesheet" href="./vendor/normalize.css">
   <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="page">
@@ -42,7 +41,14 @@
   <!-- // Хидер -->
 
   <section class="lead">
-
+    <h1 class="lead__title">Путешествия по России</h1>
+    <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+    <figure class="lead__figure">
+      <img class="lead__image" src="https://placehold.it/984x615" alt="Путешествия по России">
+      <figcaption class="lead__caption">
+        Ваша полка — верхняя
+      </figcaption>
+    </figure>
   </section>
 
 
