--- a/index.html
+++ b/index.html
@@ -40,17 +40,84 @@
   </header>
   <!-- // Хидер -->
 
+  <!-- Первый экран -->
   <section class="lead">
-    <h1 class="lead__title">Путешествия по России</h1>
-    <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+    <h1 class="lead__title">Путешествия по&nbsp;России</h1>
+    <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а&nbsp;здесь.</p>
     <figure class="lead__figure">
-      <img class="lead__image" src="https://placehold.it/984x615" alt="Путешествия по России">
+      <img class="lead__image" src="./images/train-window.png" srcset="./images/train-window@2x.png 2x" alt="Путешествия по России">
+      <!-- Можно было склеить картинки при экспортировании, но я предположил что в проекте понадобится двигать карту с городами,
+       и здесь захотелось сверстать свг вставив как картинку. Если правильнее вставить SVG, именно как svg, вставлю.  -->
+      <img class="lead__map" src="./images/railroad.svg" alt="Маршрут путешествия по России">
       <figcaption class="lead__caption">
         Ваша полка — верхняя
       </figcaption>
     </figure>
   </section>
+  <!-- // Первый экран -->
 
+  <!-- Вводная -->
+  <section class="intro">
+    <h2 class="intro__title">Чего мы там не видели?</h2>
+    <p class="intro__text">
+      По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
+    </p>
+    <ul class="intro__list">
+      <li class="intro__list-item">Часовых поясов 11</li>
+      <li class="intro__list-item">Объектов природного наследия ЮНЕСКО 12</li>
+      <li class="intro__list-item">Объектов культурного наследия ЮНЕСКО 16</li>
+      <li class="intro__list-item">Природных заповедников 105</li>
+      <li class="intro__list-item">Аэропортов 241</li>
+    </ul>
+  </section>
+  <!-- // Вводная -->
+
+  <!-- Фотогаллерея -->
+  <section class="photo-grid">
+    <!--  Семантически тут должен быть заголовок  -->
+    <h2 class="hidden-text">Фаотографии</h2>
+
+    <a href="#" title="" class="photo-grid__item">
+      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+    </a>
+    <a href="#" title="" class="photo-grid__item">
+      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+    </a>
+    <a href="#" title="" class="photo-grid__item">
+      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+    </a>
+    <a href="#" title="" class="photo-grid__item">
+      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+    </a>
+    <a href="#" title="" class="photo-grid__item">
+      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+    </a>
+    <a href="#" title="" class="photo-grid__item">
+      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+    </a>
+    <a href="#" title="" class="photo-grid__item">
+      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+    </a>
+    <a href="#" title="" class="photo-grid__item">
+      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+    </a>
+    <a href="#" title="" class="photo-grid__item">
+      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+    </a>
+    <a href="#" title="" class="photo-grid__item">
+      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+    </a>
+    <a href="#" title="" class="photo-grid__item">
+      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+    </a>
+    <a href="#" title="" class="photo-grid__item">
+      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+    </a>
+
+  </section>
+  <!-- // Фотогаллерея -->
+
+  <!-- Места -->
 
   <!-- Футер -->
   <footer class="footer">
