Закончена основная работа над макетом

--- a/index.html
+++ b/index.html
@@ -78,40 +78,40 @@
     <h2 class="hidden-text">Фаотографии</h2>
 
     <a href="#" title="" class="photo-grid__item">
-      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+      <img class="photo-grid__image" src="./images/photo-grid-train.jpg" alt="Фотография природы России">
     </a>
     <a href="#" title="" class="photo-grid__item">
-      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+      <img class="photo-grid__image" src="./images/photo-grid-atharva-tulsi.jpg" alt="Фотография природы России">
     </a>
     <a href="#" title="" class="photo-grid__item">
-      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+      <img class="photo-grid__image" src="./images/photo-grid-tuman.jpg" alt="Фотография природы России">
     </a>
     <a href="#" title="" class="photo-grid__item">
-      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+      <img class="photo-grid__image" src="./images/photo-grid-sochi.jpg" alt="Фотография природы России">
     </a>
     <a href="#" title="" class="photo-grid__item">
-      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+      <img class="photo-grid__image" src="./images/photo-grid-arisa.jpg" alt="Фотография природы России">
     </a>
     <a href="#" title="" class="photo-grid__item">
-      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+      <img class="photo-grid__image" src="./images/photo-grid-baikal.jpg" alt="Фотография природы России">
     </a>
     <a href="#" title="" class="photo-grid__item">
-      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+      <img class="photo-grid__image" src="./images/photo-grid-elbrus.jpg" alt="Фотография природы России">
     </a>
     <a href="#" title="" class="photo-grid__item">
-      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+      <img class="photo-grid__image" src="./images/photo-grid-kondratiev.jpg" alt="Фотография природы России">
     </a>
     <a href="#" title="" class="photo-grid__item">
-      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+      <img class="photo-grid__image" src="./images/photo-grid-kamchatka-1.jpg" alt="Фотография природы России">
     </a>
     <a href="#" title="" class="photo-grid__item">
-      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+      <img class="photo-grid__image" src="./images/photo-grid-kamchatka-2.jpg" alt="Фотография природы России">
     </a>
     <a href="#" title="" class="photo-grid__item">
-      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+      <img class="photo-grid__image" src="./images/photo-grid-baikal-2.jpg" alt="Фотография природы России">
     </a>
     <a href="#" title="" class="photo-grid__item">
-      <img class="photo-grid__image" src="https://placehold.it/325x264" srcset="" alt="Фотография природы России">
+      <img class="photo-grid__image" src="./images/photo-grid-ergaki.jpg" alt="Фотография природы России">
     </a>
 
   </section>
@@ -125,7 +125,7 @@
     <!-- Одно место -->
     <section class="place">
       <h3 class="place__title">Куршская коса</h3>
-      <img class="place__image" src="https://placehold.it/460x460" alt="Куршская коса">
+      <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
       <div class="place__website">
         <p class="place__url-heading">Url</p>
         <a href="http://park-kosa.ru" title="Куршская коса" class="place__link" target="_blank">park-kosa.ru</a>
@@ -144,7 +144,7 @@
     <!-- Одно место -->
     <section class="place">
       <h3 class="place__title">Кольский</h3>
-      <img class="place__image" src="https://placehold.it/460x460" alt="Куршская коса">
+      <img class="place__image" src="./images/place-kolsky.jpg" alt="Куршская коса">
       <div class="place__website">
         <p class="place__url-heading">Url</p>
         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" title="Кольский" class="place__link" target="_blank">National Geographic</a>
@@ -164,7 +164,7 @@
     <!-- Одно место -->
     <section class="place">
       <h3 class="place__title">Алтай</h3>
-      <img class="place__image" src="https://placehold.it/460x460" alt="Куршская коса">
+      <img class="place__image" src="./images/place-altai.jpg" alt="Куршская коса">
       <div class="place__website">
         <p class="place__url-heading">Url</p>
         <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" title="Алтай" class="place__link" target="_blank">Facebook</a>
@@ -184,7 +184,7 @@
     <!-- Одно место -->
     <section class="place">
       <h3 class="place__title">Зимний Байкал</h3>
-      <img class="place__image" src="https://placehold.it/460x460" alt="Куршская коса">
+      <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Куршская коса">
       <div class="place__website">
         <p class="place__url-heading">Url</p>
         <a href="https://vk.com/baikalmile" title="Зимний Байкал" class="place__link" target="_blank">https://vk.com/baikalmile</a>
@@ -203,7 +203,7 @@
     <!-- Одно место -->
     <section class="place">
       <h3 class="place__title">Карелия</h3>
-      <img class="place__image" src="https://placehold.it/460x460" alt="Куршская коса">
+      <img class="place__image" src="./images/place-karelia.jpg" alt="Куршская коса">
       <div class="place__website">
         <p class="place__url-heading">Url</p>
         <a href="http://vodlozero.ru" title="Карелия" class="place__link" target="_blank">http://vodlozero.ru/</a>
@@ -221,16 +221,46 @@
 
   <!-- Обложка -->
   <section class="cover">
-    <div class="cover__overlay">
-      <h2 class="cover__title"></h2>
-    </div>
+    <a href="https://stampsy.com/na-elektrichkakh-do-baikala" title="До Байкала «на собаках»" class="cover__link" target="_blank">
+      <figure class="cover__figure">
+        <img class="cover__background" src="./images/cover-background.png" srcset="./images/cover-background@2x.png 2x" alt="Фотография железнодорожных путей">
+
+        <figcaption class="cover__text">
+          <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
+          <p class="cover__subtitle">По мотивам учебной темы о&nbsp;Транссибе и&nbsp;iframes — путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
+        </figcaption>
+      </figure>
+
+
+      <div class="cover__overlay" ></div>
+    </a>
   </section>
 
   <!-- Обложка -->
 
   <!-- Футер -->
   <footer class="footer">
+    <nav class="footer__nav">
+      <ul class="footer__links-list">
+        <li class="footer__links-list-item">
+          <a href="https://yandex.ru/maps" title="Карты" class="footer__link" target="_blank">Карты</a>
+        </li>
+        <li class="footer__links-list-item">
+          <a href="https://yandex.ru/pogoda" title="Погода" class="footer__link">Погода</a>
+        </li>
+        <li class="footer__links-list-item">
+          <a href="https://rasp.yandex.ru" title="Расписание" class="footer__link">Расписание</a>
+        </li>
+        <li class="footer__links-list-item">
+          <a href="https://calendar.yandex.ru" title="Календарь" class="footer__link">Календарь</a>
+        </li>
+        <li class="footer__links-list-item">
+          <a href="https://travel.yandex.ru" title="Путешествия" class="footer__link">Путешествия</a>
+        </li>
+      </ul>
+    </nav>
 
+    <p class="footer__copyright">© 2020 Ваня Проскуряков</p>
   </footer>
   <!-- // Футер -->
 </body>
