--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <!-- Фотогаллерея -->
   <section class="photo-grid">
     <!--  Семантически тут должен быть заголовок, без него нельзя использовать семантические секции  -->
-    <h2 class="hidden-text">Фаотографии</h2>
+    <h2 class="hidden-text">Фотографии</h2>
 
     <a href="#" title="" class="photo-grid__item">
       <img class="photo-grid__image" src="./images/photo-grid-train.jpg" alt="Фотография природы России">
@@ -118,13 +118,11 @@
   <!-- // Фотогаллерея -->
 
   <!-- Места -->
-  <article class="places">
-    <!--  Семантически тут должен быть заголовок, без него нельзя использовать семантические секции  -->
-    <h2 class="hidden-text">Места</h2>
+  <main class="places">
 
     <!-- Одно место -->
-    <section class="place">
-      <h3 class="place__title">Куршская коса</h3>
+    <article class="place">
+      <h2 class="place__title">Куршская коса</h2>
       <img class="place__image" src="./images/place-kosa.jpg" alt="Куршская коса">
       <div class="place__website">
         <p class="place__url-heading">Url</p>
@@ -138,12 +136,12 @@
           На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
         </p>
       </div>
-    </section>
+    </article>
     <!-- Одно место -->
 
     <!-- Одно место -->
-    <section class="place">
-      <h3 class="place__title">Кольский</h3>
+    <article class="place">
+      <h2 class="place__title">Кольский</h2>
       <img class="place__image" src="./images/place-kolsky.jpg" alt="Куршская коса">
       <div class="place__website">
         <p class="place__url-heading">Url</p>
@@ -158,12 +156,12 @@
           Возможно, вы смотрели Звягинцева и даже слышали историю арктического фестиваля в Териберке. Возможно, слово «Хибины» не осталось под снегом школьных воспоминаний об уроках географии. Возможно, вы не интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.
         </p>
       </div>
-    </section>
+    </article>
     <!-- Одно место -->
 
     <!-- Одно место -->
-    <section class="place">
-      <h3 class="place__title">Алтай</h3>
+    <article class="place">
+      <h2 class="place__title">Алтай</h2>
       <img class="place__image" src="./images/place-altai.jpg" alt="Куршская коса">
       <div class="place__website">
         <p class="place__url-heading">Url</p>
@@ -178,12 +176,12 @@
           Климат на Алтае умеренный, поэтому ехать сюда лучше всего летом. Так вы увидите всё разнообразие местной флоры и фауны. По лесам Алтая бродят лоси, над хребтами летают орлы, а на равнинах пасутся косули. И знаменитые манулы — тоже обитатели Алтайского края.
         </p>
       </div>
-    </section>
+    </article>
     <!-- Одно место -->
 
     <!-- Одно место -->
-    <section class="place">
-      <h3 class="place__title">Зимний Байкал</h3>
+    <article class="place">
+      <h2 class="place__title">Зимний Байкал</h2>
       <img class="place__image" src="./images/place-winter-baikal.jpg" alt="Куршская коса">
       <div class="place__website">
         <p class="place__url-heading">Url</p>
@@ -197,12 +195,12 @@
           Конечно, это всё так. Но Байкал ещё идеальное место для соревнований по скийорингу. Это такой вид спорта, когда лыжник привязывает себя
           к мотоциклу, и тандем старается развить как можно бóльшую скорость на льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.        </p>
       </div>
-    </section>
+    </article>
     <!-- Одно место -->
 
     <!-- Одно место -->
-    <section class="place">
-      <h3 class="place__title">Карелия</h3>
+    <article class="place">
+      <h2 class="place__title">Карелия</h2>
       <img class="place__image" src="./images/place-karelia.jpg" alt="Куршская коса">
       <div class="place__website">
         <p class="place__url-heading">Url</p>
@@ -214,9 +212,9 @@
           В девственном лесу на сотню километров не встретишь тропы. А на редких тропинках деревья
           в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.</p>
       </div>
-    </section>
+    </article>
     <!-- Одно место -->
-  </article>
+  </main>
   <!-- //Места -->
 
   <!-- Обложка -->
